fullSandbox11072023/force-app/main/default/objects/Territory_Account__c/Territory_Account__c.object-meta.xml
<CustomObject>
    <label>Territory Account</label>
    <nameField>
        <displayFormat>Terr-{0000000}</displayFormat>
        <label>Territory Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>