fullSandbox11072023/force-app/main/default/objects/Territory_Account__c/fields/Key_Check__c.field-meta.xml
<CustomField>
    <fullName>Key_Check__c</fullName>
    <formula>IF(Key__c = Key_Temp__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Check</label>
    <type>Checkbox</type>
</CustomField>