fullSandbox11072023/force-app/main/default/objects/Territory_Account__c/fields/Territory_Master__c.field-meta.xml
<CustomField>
    <fullName>Territory_Master__c</fullName>
    <label>Territory Number</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Territory Accounts</relationshipLabel>
    <relationshipName>Territory_Accounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>