fullSandbox11072023/force-app/main/default/objects/Territory_Account__c/listViews/X800737_N_W_Florida.listView-meta.xml
<ListView>
    <fullName>X800737_N_W_Florida</fullName>
    <columns>NAME</columns>
    <columns>Territory_Master__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory_Master__c</field>
        <operation>equals</operation>
        <value>800737</value>
    </filters>
    <label>800737 N.W. Florida</label>
    <language>en_US</language>
    <sharedTo>
        <role>Vascular_MSR_Southeast</role>
        <role>Vascular_RSM_Southeast</role>
    </sharedTo>
</ListView>